--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                         <li>Data Science</li>
                         <li>with Jupyter Notebook</li>
                     </ul>
-                    <h4 style="color:white;"><a href="blog-post1.html">H1N1 and Seasonal Flu Vaccine Prediction</a></h4>
-                    <p style="color:rgb(138, 138, 138);">Predict if a patient will get h1n1 and seasonal flu vaccine based on health practices factors and survey data</p>
+                    <h4 style="color:white;"><a href="blog-post1.html">Prediction of H1N1 and Seasonal Flu Vaccines</a></h4>
+                    <p style="color:rgb(138, 138, 138);">An analysis of survey data to predict how likely is a specific patient to get either one or both the H1N1 and seasonal flu vaccines based on several factors.</p>
                 </div>
             </article>
             <!-- Post / Item -->
