--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <li>Data Science</li>
                         <li>with Jupyter Notebook</li>
                     </ul>
-                    <h4 style="color:white;"><a href="blog-post1.html">Prediction of H1N1 and Seasonal Flu Vaccines</a></h4>
+                    <h4 style="color:white;"><a href="https://github.com/daniocionini/Prediction-Vaccine-H1N1">Prediction of H1N1 and Seasonal Flu Vaccines</a></h4>
                     <p style="color:rgb(138, 138, 138);">An analysis of survey data to predict how likely is a specific patient to get either one or both the H1N1 and seasonal flu vaccines based on several factors.</p>
                 </div>
             </article>
