--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     
     <!-- Section - Resume -->
     <section id="resume" class="section background-color bg-black">
-        <h3 class="text-center mb-80 text-dark">My Resume</h3>
+        <h3 class="text-center mb-80 text-dark">Resume</h3>
         <div class="container container-custom">
-            <p class="lead text-muted mb-80">Aliquam nec lacus sollicitudin, ornare arcu at, tempor dolor. Quisque dapibus libero nec turpis molestie auctor. Quisque dapibus nisl enim, consequat blandit purus porttitor elementum. Maecenas placerat dapibus ullamcorper.</p>
+            <p class="lead text-muted mb-80"></p>
 
             <div class="row masonry long-spaces">
                 <div class="masonry-sizer col-sm-6 col-xs-12"></div>
@@ -145,42 +145,42 @@
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-config"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Machine Learning &lt;/&gt; Data Science</h4>
+                                <h4 style="color:white;">Machine Learning</h4>
                             </div>
                         </div>
                         <!-- Feature -->
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-graph3"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Data Analysis & Visualization &lt;/&gt; EDA</h4>
+                                <h4 style="color:white;">Data Science</h4>
                             </div>
                         </div>
                         <!-- Feature -->
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-server"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Database &lt;/&gt; IBM Cloud &lt;/&gt; Big Data</h4>
+                                <h4 style="color:white;">Cloud Computing</h4>
                             </div>
                         </div>
                         <!-- Feature -->
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-graph"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Statistics &lt;/&gt; Mathematics</h4>
+                                <h4 style="color:white;">Statistics</h4>
                             </div>
                         </div>
                         <!-- Feature -->
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-filter"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Data Wrangling &lt;/&gt; Data Mining</h4>
+                                <h4 style="color:white;">CI/CD</h4>
                             </div>
                         </div>
                         <!-- Feature -->
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-loop"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Web Scraping &lt;/&gt; Data Integration</h4>
+                                <h4 style="color:white;">Web Development</h4>
                             </div>
                         </div>
                     </div>
@@ -253,9 +253,18 @@
                         <!-- Skill -->
                         <div class="feature feature-2">
                             <ul class="nav-icons nav-sm">
-                                <span class="icon icon-python"><i class="fa-brands fa-microsoft"></i></span>
+                                <span class="icon icon-python"><i class="fa-brands fa-aws"></i></span>
                                 <div class="feature-content">
-                                    <h4 style="color:white;">Data Mining Wizard</h4>
+                                    <h4 style="color:white;">Amazon Web Services</h4>
+                                </div>
+                            </ul>
+                        </div>
+                        <!-- Skill -->
+                        <div class="feature feature-2">
+                            <ul class="nav-icons nav-sm">
+                                <span class="icon icon-python"><i class="fa-regular fa-code"></i></span>
+                                <div class="feature-content">
+                                    <h4 style="color:white;">HTML</h4>
                                 </div>
                             </ul>
                         </div>
@@ -269,9 +278,9 @@
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <span class="date" style="color:rgb(138, 138, 138);">08.2010 - 09.2011</span>
-                                    <h4 style="color:white">Front-End Developer</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);">Envato, Sydney, Australia</span>
+                                    <span class="date" style="color:rgb(138, 138, 138);">08.2022 - Present</span>
+                                    <h4 style="color:white">Cloud Engineer</h4>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="Filac Technology Srl" target:"_blank">Filac Technology Srl</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
