--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         <!-- Skill -->
                         <div class="feature feature-2">
                             <ul class="nav-icons nav-sm">
-                                <span class="icon icon-python"><i class="fa-regular fa-code"></i></span>
+                                <span class="icon icon-python"><i class="fa-brands fa-html5"></i></span>
                                 <div class="feature-content">
                                     <h4 style="color:white;">HTML</h4>
                                 </div>
@@ -280,24 +280,39 @@
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">08.2022 - Present</span>
                                     <h4 style="color:white">Cloud Engineer</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="Filac Technology Srl" target:"_blank">Filac Technology Srl</a></span>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.filactech.com/team-filac" target:"_blank">Filac Technology Srl</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <img src="assets/img/photos/london.jpg" alt="" class="img-rounded">
-                                    <span class="date" style="color:rgb(138, 138, 138);">08.2010 - 09.2011</span>
-                                    <h4 style="color:white">Webdesigner &amp; Front End Developer</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);">Envato, Sydney, Australia</span>
+                                    <span class="date" style="color:rgb(138, 138, 138);">05.2021 - Present</span>
+                                    <h4 style="color:white">BSc Data Science</h4>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.lse.ac.uk/" target:"_blank">London School of Economics and Political Science</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <span class="date" style="color:rgb(138, 138, 138);">08.2010 - 09.2011</span>
-                                    <h4 style="color:white">Front-End Developer</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);">Envato, Sydney, Australia</span>
+                                    <span class="date" style="color:rgb(138, 138, 138);">11.2019 - 11.2022</span>
+                                    <h4 style="color:white">Data Scientist/h4>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target:"_blank">Giolitti Auto d'Epoca Srl</a></span>
+                                </div>
+                            </div>
+                            <!-- Event-->
+                            <div class="timeline-event animated">
+                                <div class="content">
+                                    <span class="date" style="color:rgb(138, 138, 138);">05.2018 - 11.2019</span>
+                                    <h4 style="color:white">Data Analyst Intern/h4>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target:"_blank">Giolitti Auto d'Epoca Srl</a></span>
+                                </div>
+                            </div>
+                            <!-- Event-->
+                            <div class="timeline-event animated">
+                                <div class="content">
+                                    <span class="date" style="color:rgb(138, 138, 138);">09.2014 - 04.2016</span>
+                                    <h4 style="color:white">BSc Signal Processing/h4>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.uclan.ac.uk/" target:"_blank">University of Central Lancashire</a></span>
                                 </div>
                             </div>
                         </div>
