--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <div class="timeline-event animated">
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">11.2019 - 11.2022</span>
-                                    <h4 style="color:white">Data Scientist/h4>
+                                    <h4 style="color:white">Data Scientist</h4>
                                     <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target:"_blank">Giolitti Auto d'Epoca Srl</a></span>
                                 </div>
                             </div>
@@ -303,7 +303,7 @@
                             <div class="timeline-event animated">
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">05.2018 - 11.2019</span>
-                                    <h4 style="color:white">Data Analyst Intern/h4>
+                                    <h4 style="color:white">Data Analyst Intern</h4>
                                     <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target:"_blank">Giolitti Auto d'Epoca Srl</a></span>
                                 </div>
                             </div>
@@ -311,7 +311,7 @@
                             <div class="timeline-event animated">
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">09.2014 - 04.2016</span>
-                                    <h4 style="color:white">BSc Signal Processing/h4>
+                                    <h4 style="color:white">BSc Signal Processing</h4>
                                     <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.uclan.ac.uk/" target:"_blank">University of Central Lancashire</a></span>
                                 </div>
                             </div>
