--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <!-- Languages -->
                 <div class="masonry-item col-sm-6 col-xs-12">
                     <div class="resume-card boxed">
-                        <h3 class="title" style="color:rgb(138, 138, 138);">Programming Languages</h3>
+                        <h3 class="title" style="color:rgb(138, 138, 138);">Software & Tools</h3>
                         <!-- Skill -->
                         <div class="feature feature-2">
                             <ul class="nav-icons nav-sm">
