--- a/index.html
+++ b/index.html
@@ -188,10 +188,13 @@
                 <!-- Skills -->
                 <div class="masonry-item col-sm-6 col-xs-12">
                     <div class="resume-card boxed">
-                        <h3 class="title" style="color:rgb(138, 138, 138);">Soft Skills</h3>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Analytical thinking  ◦  Determined perfectionism</h5>
+                        <h3 class="title" style="color:rgb(138, 138, 138);">Certificates</h3>
+                        <!-- Feature -->
+                        <div class="feature feature-2">
+                            <span class="icon icon-primary"><i class="pe-7s-graph"></i></span>
+                            <div class="feature-content">
+                                <h4 style="color:white;">Statistics</h4>
+                            </div>
                         </div>
                         <!-- Skill -->
                         <div class="skill">
