--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         </div>
                         <!-- Feature -->
                         <div class="feature feature-2">
-                            <span class="icon icon-primary"><i class="pe-7s-server"></i></span>
+                            <span class="icon icon-primary"><i class="pe-7s-cloud-upload"></i></span>
                             <div class="feature-content">
                                 <h4 style="color:white;">Cloud Computing</h4>
                             </div>
@@ -191,9 +191,9 @@
                         <h3 class="title" style="color:rgb(138, 138, 138);">Certificates</h3>
                         <!-- Feature -->
                         <div class="feature feature-2">
-                            <span class="icon icon-primary"><i class="pe-7s-graph"></i></span>
+                            <span class="icon icon-primary"><i class="pe-7s-exapnd2"><a href="https://online.hbs.edu/verify-certificate?dvid=DPJOSNXG" target="_blank"></a></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Statistics</h4>
+                                <h4 style="color:white;">Business Analytics - Harvard Business School</h4>
                             </div>
                         </div>
                         <!-- Skill -->
