--- a/index.html
+++ b/index.html
@@ -191,35 +191,24 @@
                         <h3 class="title" style="color:rgb(138, 138, 138);">Certificates</h3>
                         <!-- Feature -->
                         <div class="feature feature-2">
-                            <span class="icon icon-primary"><i class="pe-7s-exapnd2"><a href="https://online.hbs.edu/verify-certificate?dvid=DPJOSNXG" target="_blank"></a></i></span>
+                            <span class="icon icon-primary"><i class="pe-7s-exapnd2"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;">Business Analytics - Harvard Business School</h4>
+                                <h4 style="color:white;"><a href="https://online.hbs.edu/verify-certificate?dvid=DPJOSNXG" target="_blank">Business Analytics - Harvard Business School</a></h4>
+                            </div>
+                        <!-- Feature -->
+                        <div class="feature feature-2">
+                            <span class="icon icon-primary"><i class="pe-7s-exapnd2"></i></span>
+                            <div class="feature-content">
+                                <h4 style="color:white;"><a href="https://drive.google.com/file/d/1yWOmlFhD4Afq3IcU4tYstyFISHsr8rxV/view" target="_blank">Fundamental of Genetics - Stanford University</a></h4>
                             </div>
                         </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Strong organisational skills  ◦  Propositivity</h5>
-                        </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Managing multiple priorities  ◦  Strong evaluation</h5>
-                        </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Team player  ◦  Team leader</h5>
-                        </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Problem-solving  ◦  Willingness to learn</h5>
-                        </div>
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Strong communication  ◦  Data intuition</h5>
-                        </div>    
-                        <!-- Skill -->
-                        <div class="skill">
-                            <h5 style="color:white;">Multiculturality</h5>
-                        </div>                                                 
+                        <!-- Feature -->
+                        <div class="feature feature-2">
+                            <span class="icon icon-primary"><i class="pe-7s-exapnd2"></i></span>
+                            <div class="feature-content">
+                                <h4 style="color:white;"><a href="" target="_blank">AWS Certified Cloud Pratictioner (CLF-C01) - Amazon Web Services</a></h4>
+                            </div>
+                        </div>                                               
                     </div>
                 </div>
                 <!-- Languages -->
