--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-exapnd2"></i></span>
                             <div class="feature-content">
-                                <h4 style="color:white;"><a href="" target="_blank">AWS Certified Cloud Pratictioner (CLF-C01) - Amazon Web Services</a></h4>
+                                <h4 style="color:white;">AWS Certified Cloud Pratictioner (CLF-C01) - Amazon Web Services</h4>
                             </div>
                         </div>                                               
                     </div>
