--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
         <div id="works-list" class="filter-list row masonry no-spaces">
             <div class="masonry-sizer col-md-4 col-sm-6 col-xs-12"></div>
             <!-- Image Box -->
-            <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work01.jpg" alt=""></a></div>
+                    <div class="image"><a href="https://aws.amazon.com/certification/certified-cloud-practitioner/" data-toggle="ajax-modal"><img src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Mountain View</h4>
-                            <span class="text-muted">Mobile Apps</span>
+                            <h4 class="mb-0">AWS Certified Cloud Practitioner (CLF-C01)</h4>
+                            <span class="text-muted">Amazon Web Services</span>
                         </a>
                     </div>
                 </div>
