--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <nav class="filter-bar bg-primary dark">
             <div class="tabs-wrapper">
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
-                    <li class="active"><a href="#" data-filter="*">All</a></li>
+                    <li class="active"><a href="#" data-filter="*">All Certifications</a></li>
                     <li><a href="#" data-filter=".webdesign">Cloud Computing</a></li>
                     <li><a href="#" data-filter=".mobileApps">Data Science</a></li>
                     <li><a href="#" data-filter=".socialMedia">Machine Learning</a></li>
@@ -340,9 +340,9 @@
 
         <!-- Works List -->
         <div id="works-list" class="filter-list row masonry no-spaces">
-            <div class="masonry-sizer col-md-4 col-sm-6 col-xs-12"></div>
+            <div class="masonry-sizer col-md-4 col-sm-3 col-xs-12"></div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="webdesign masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="https://aws.amazon.com/certification/certified-cloud-practitioner/" data-toggle="ajax-modal"><img src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt=""></a></div>
                     <div class="hover">
@@ -354,61 +354,13 @@
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
+            <div class="webdesign masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work02.jpg" alt=""></a></div>
+                    <div class="image"><a href="https://drive.google.com/file/d/1yWOmlFhD4Afq3IcU4tYstyFISHsr8rxV/view" data-toggle="ajax-modal"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b7/Stanford_University_seal_2003.svg/1200px-Stanford_University_seal_2003.svg.png" alt=""></a></div>
                     <div class="hover">
                         <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">On the Beach</h4>
-                            <span class="text-muted">Webdesign</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Image Box -->
-            <div class="socialMedia masonry-item col-md-4 col-sm-6 col-xs-12">
-                <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work03.jpg" alt=""></a></div>
-                    <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Cast Away</h4>
-                            <span class="text-muted">Social Media</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
-                <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work04.jpg" alt=""></a></div>
-                    <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">On the Desert</h4>
-                            <span class="text-muted">Webdesign</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-6 col-xs-12">
-                <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work05.jpg" alt=""></a></div>
-                    <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">Apple MacBook</h4>
-                            <span class="text-muted">Webdesign</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Image Box -->
-            <div class="mobileApps masonry-item col-md-4 col-sm-6 col-xs-12">
-                <div class="image-box">
-                    <div class="image"><a href="project-example.html" data-toggle="ajax-modal"><img src="assets/img/works/work06.jpg" alt=""></a></div>
-                    <div class="hover">
-                        <a href="project-example.html" data-toggle="ajax-modal">
-                            <h4 class="mb-0">The Tree</h4>
-                            <span class="text-muted">Mobile Apps</span>
+                            <h4 class="mb-0">Fundamental of Genetics</h4>
+                            <span class="text-muted">Stanford University</span>
                         </a>
                     </div>
                 </div>
