--- a/index.html
+++ b/index.html
@@ -365,6 +365,18 @@
                     </div>
                 </div>
             </div>
+            <!-- Image Box -->
+            <div class="webdesign masonry-item col-md-4 col-sm-3 col-xs-12">
+                <div class="image-box">
+                    <div class="image"><a href="https://online.hbs.edu/verify-certificate?dvid=DPJOSNXG" data-toggle="ajax-modal"><img src="https://upload.wikimedia.org/wikipedia/commons/2/25/Harvard_University_shield.png" alt=""></a></div>
+                    <div class="hover">
+                        <a href="project-example.html" data-toggle="ajax-modal">
+                            <h4 class="mb-0">Business Analytics</h4>
+                            <span class="text-muted">Harvard Business School</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </section>
