--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">08.2022 - Present</span>
                                     <h4 style="color:white">Cloud Engineer</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.filactech.com/team-filac" target:"_blank">Filac Technology Srl</a></span>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.filactech.com/team-filac" target="_blank">Filac Technology Srl</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
@@ -204,7 +204,7 @@
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">05.2021 - Present</span>
                                     <h4 style="color:white">BSc Data Science</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.lse.ac.uk/" target:"_blank">London School of Economics and Political Science</a></span>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.lse.ac.uk/" target="_blank">London School of Economics and Political Science</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
@@ -212,7 +212,7 @@
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">11.2019 - 11.2022</span>
                                     <h4 style="color:white">Data Scientist</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target:"_blank">Giolitti Auto d'Epoca Srl</a></span>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target="_blank">Giolitti Auto d'Epoca Srl</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
@@ -220,7 +220,7 @@
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">05.2018 - 11.2019</span>
                                     <h4 style="color:white">Data Analyst Intern</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target:"_blank">Giolitti Auto d'Epoca Srl</a></span>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.giolittiricambiautodepoca.com/it/" target="_blank">Giolitti Auto d'Epoca Srl</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
@@ -228,7 +228,7 @@
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">09.2014 - 04.2016</span>
                                     <h4 style="color:white">BSc Signal Processing</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.uclan.ac.uk/" target:"_blank">University of Central Lancashire</a></span>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.uclan.ac.uk/" target="_blank">University of Central Lancashire</a></span>
                                 </div>
                             </div>
                         </div>
@@ -354,7 +354,7 @@
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-3 col-xs-12">
+            <div class="mobileApps masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="https://drive.google.com/file/d/1yWOmlFhD4Afq3IcU4tYstyFISHsr8rxV/view" data-toggle="ajax-modal"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b7/Stanford_University_seal_2003.svg/1200px-Stanford_University_seal_2003.svg.png" alt=""></a></div>
                     <div class="hover">
@@ -366,7 +366,7 @@
                 </div>
             </div>
             <!-- Image Box -->
-            <div class="webdesign masonry-item col-md-4 col-sm-3 col-xs-12">
+            <div class="mobileApps masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="https://online.hbs.edu/verify-certificate?dvid=DPJOSNXG" data-toggle="ajax-modal"><img src="https://upload.wikimedia.org/wikipedia/commons/2/25/Harvard_University_shield.png" alt=""></a></div>
                     <div class="hover">
