--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <li>GitHub</li>
                         <li>with Jupyter Notebook</li>
                     </ul>
-                    <h4 style="color:white;"><a href="https://github.com/daniocionini/Prediction-Vaccine-H1N1">Prediction of H1N1 and Seasonal Flu Vaccines</a></h4>
+                    <h4 style="color:white;"><a href="https://github.com/daniocionini/Prediction-Vaccine-H1N1" target="_blank">Prediction of H1N1 and Seasonal Flu Vaccines</a></h4>
                     <p style="color:rgb(138, 138, 138);">An analysis of survey data to predict how likely is a specific patient to get either one or both the H1N1 and seasonal flu vaccines based on several factors.</p>
                 </div>
             </article>
@@ -105,7 +105,7 @@
                             <li>GitHub</li>
                             <li>with Jupyter Notebook</li>
                         </ul>
-                        <h4 style="color:white;"><a href="https://github.com/daniocionini/Cancer-Immunotherapy-Data-Science-Challenge">T cells prediction for Cancer Immunotherapy</a></h4>
+                        <h4 style="color:white;"><a href="https://github.com/daniocionini/Cancer-Immunotherapy-Data-Science-Challenge" target="_blank">T cells prediction for Cancer Immunotherapy</a></h4>
                         <p style="color:rgb(138, 138, 138);">Prediction of the best individual gene modifications to make T cells more effective for cancer immunotherapy.</p>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         <li>GitHub</li>
                         <li>with Jupyter Notebook</li>
                     </ul>
-                    <h4 style="color:white;"><a href="https://github.com/daniocionini/mRNA-covid-vaccine-degradation-prediction/blob/main/README.md">Covid-19 mRNA Vaccine Degradation Prediction</a></h4>
+                    <h4 style="color:white;"><a href="https://github.com/daniocionini/mRNA-covid-vaccine-degradation-prediction/blob/main/README.md" target="_blank">Covid-19 mRNA Vaccine Degradation Prediction</a></h4>
                     <p style="color:rgb(138, 138, 138);">Model deployment to predict likely degradation rates at each base of an RNA molecule.</p>
                 </div>
             </article>
