--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     
     <!-- Section - Resume -->
     <section id="resume" class="section background-color bg-black">
-        <h3 class="text-center mb-80 text-dark">Resume</h3>
+        <h3 class="text-center mb-80 text-dark">My Skills</h3>
         <div class="container container-custom">
             <p class="lead text-muted mb-80"></p>
 
@@ -140,7 +140,7 @@
                 <!-- Specialities -->
                 <div class="masonry-item col-sm-6 col-xs-12">
                     <div class="resume-card boxed">
-                        <h3 class="title" style="color:rgb(138, 138, 138);">Hard Skills</h3>
+                        <h3 class="title" style="color:rgb(138, 138, 138);">Technical</h3>
                         <!-- Feature -->
                         <div class="feature feature-2">
                             <span class="icon icon-primary"><i class="pe-7s-config"></i></span>
