--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Photo -->
     <a href="index-collapsed-dark.html" class="photo">
-        <img src="assets/img/photos/accountant_avatar.jpg" alt="">
+        <img src="https://avatars.githubusercontent.com/u/85347335?v=4" alt="">
     </a>
 
     <!-- Navigation -->
