--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul class="nav nav-vertical">
             <li><a href="#latest-posts"><i class="pe-7s-copy-file"></i><span>Portfolio</span></a></li>
             <li><a href="#resume"><i class="pe-7s-ribbon"></i><span>Skills</span></a></li>
-            <li><a href="#portfolio"><i class="pe-7s-monitor"></i><span>Certificates</span></a></li>
+            <!-- <li><a href="#portfolio"><i class="pe-7s-monitor"></i><span>Certificates</span></a></li> -->
         </ul>
         <span class="selector"></span>
     </nav>
@@ -72,8 +72,9 @@
             <p class="lead text-muted">Data Scientist with Cloud Computing experience.</p>
             <ul class="nav-icons nav-sm">
                 <li><a href="https://github.com/daniocionini" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://twitter.com/data_cioninidan" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/daniocionini/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://stackoverflow.com/users/16124834/d-cio" target="_blank"><i class="fab fa-stack-overflow"></i></a></li>
+                <li><a href="https://twitter.com/data_cioninidan" target="_blank"><i class="fab fa-twitter"></i></a></li>
             </ul>
             <a href="#latest-posts" class="btn btn-primary btn-lg">My Portfolio</a><a href="#resume" class="btn btn-link btn-lg btn-light">My Skills</a>
         </div>
@@ -322,11 +323,11 @@
 
     </section>
 
-    <!-- Section - Portfolio -->
+<!--
     <section id="portfolio" class="section cover bg-black">
-    
-        <!-- Filter Bar -->
+
         <nav class="filter-bar bg-primary dark">
+
             <div class="tabs-wrapper">
                 <ul class="filter nav nav-tabs" data-filter-list="#works-list">
                     <li class="active"><a href="#" data-filter="*">All Certifications</a></li>
@@ -338,10 +339,10 @@
             </div>
         </nav>
 
-        <!-- Works List -->
+
         <div id="works-list" class="filter-list row masonry no-spaces">
             <div class="masonry-sizer col-md-4 col-sm-3 col-xs-12"></div>
-            <!-- Image Box -->
+
             <div class="webdesign masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="https://aws.amazon.com/certification/certified-cloud-practitioner/" data-toggle="ajax-modal"><img src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Cloud-Practitioner_badge.634f8a21af2e0e956ed8905a72366146ba22b74c.png" alt=""></a></div>
@@ -353,7 +354,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Image Box -->
+
             <div class="mobileApps masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="https://drive.google.com/file/d/1yWOmlFhD4Afq3IcU4tYstyFISHsr8rxV/view" data-toggle="ajax-modal"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b7/Stanford_University_seal_2003.svg/1200px-Stanford_University_seal_2003.svg.png" alt=""></a></div>
@@ -365,7 +366,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Image Box -->
+
             <div class="mobileApps masonry-item col-md-4 col-sm-3 col-xs-12">
                 <div class="image-box">
                     <div class="image"><a href="https://online.hbs.edu/verify-certificate?dvid=DPJOSNXG" data-toggle="ajax-modal"><img src="https://upload.wikimedia.org/wikipedia/commons/2/25/Harvard_University_shield.png" alt=""></a></div>
@@ -380,7 +381,7 @@
         </div>
 
     </section>
-
+-->
 <!-- Mobile Nav Toggle -->
 <a href="#" id="vertical-nav-toggle" class="nav-toggle" data-toggle="mobile-nav"><span><span></span></span></a>
 
