--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             <!-- Event-->
                             <div class="timeline-event animated">
                                 <div class="content">
-                                    <span class="date" style="color:rgb(138, 138, 138);">08.2022 - Present</span>
+                                    <span class="date" style="color:rgb(138, 138, 138);">08.2022 - 02.2023</span>
                                     <h4 style="color:white">Cloud Engineer</h4>
                                     <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.filactech.com/team-filac" target="_blank">Filac Technology Srl</a></span>
                                 </div>
