--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                         <li>GitHub</li>
                         <li>with Jupyter Notebook</li>
                     </ul>
-                    <h4 style="color:white;"><a href="https://github.com/daniocionini/mRNA-covid-vaccine-degradation-prediction/blob/main/README.md" target="_blank">Covid-19 mRNA Vaccine Degradation Prediction</a></h4>
-                    <p style="color:rgb(138, 138, 138);">Model deployment to predict likely degradation rates at each base of an RNA molecule.</p>
+                    <h4 style="color:white;"><a href="https://github.com/daniocionini/Prediction-Model-Breast-Cancer-Recurrence" target="_blank">Breast Cancer Recurrence Prediction using Machine Learning</a></h4>
+                    <p style="color:rgb(138, 138, 138);">Breast cancer is the most commonly diagnosed cancer among women around the world. In 2020 there were more than 2.26 million new cases of breast cancer worldwide and are estimated to grow in the future.</p>
                 </div>
             </article>
             <div class="text-center mt-60">
