--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                             <div class="timeline-event animated">
                                 <div class="content">
                                     <span class="date" style="color:rgb(138, 138, 138);">04.2023 - Present</span>
-                                    <h4 style="color:white">Data Scientist (Intern)</h4>
-                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://www.filactech.com/team-filac" target="_blank">Digi.Bio</a></span>
+                                    <h4 style="color:white">Data Scientist</h4>
+                                    <span class="caption" style="color:rgb(138, 138, 138);"><a href="https://digi.bio/team/" target="_blank">Digi.Bio</a></span>
                                 </div>
                             </div>
                             <!-- Event-->
